--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
     <main class="header-bg" >
       <section class=" headercontent">
       <header>
-        <a href="#" class="logo">RICHES</a><span class="dot">.</span></a>
+        <a href="#" class="logo">RICHES</a>
         <div class="menuToggle" onclick="toggleMenu();"></div>
         <ul class="navigation">
-            <li><a href="#banner" onclick="toggleMenu();">home</a></li>
+            <li><a href="#" onclick="toggleMenu();">home</a></li>
             <li><a href="about.html" onclick="toggleMenu();">about</a></li>
             <li><a href="#courses" onclick="toggleMenu();">courses</a></li>
         </ul>
     </header>
-            <div id="banner" class=" container justify-content-center justify-content-lg-start mt-5">
+            <div class=" container justify-content-center justify-content-lg-start pt-lg-2 mt-5 pt-sm-5">
               <h3 class="greeting">hi There,</h3>
               <h1 class="title">
                 The E-learning Platform That Simplifies Online Training!
@@ -47,14 +47,14 @@
                   </h4>
                 </div>
               </div>
-              <div class="mt-3 mt-lg-4">
-                <h3 class="text1">You can learn Anytime and Anywhere.</h3>
+              <div class="mt-3 mt-lg-4 ">
+                <h3 class="text1 grey">You can learn Anytime and Anywhere.</h3>
                 <h4 class="text2 grey">So lets start learning web development.</h4>
               </div>
               </div>
              </main>
-    <section class="d-lg-none d-sm-block">
-        <div class="card coursescard p-3">
+    <section class="d-lg-none d-sm-block d-md-block">
+        <div class="card coursescard p-3 ">
             <div class="">
                 <h2 class=" text-white text-center card-title">Our Courses</h2>
             <hr class="line">
@@ -66,7 +66,7 @@
                     <div class="row">
                     <img src="assets/icons/react.png" class="bg col-sm-4"h alt="" />
                     <h2 class="card-text col-sm-4 technology">React</h2>
-                    <h5 class="col-sm-4">Learn this popular framework, React is a front end libary in demand. learn react fundamentals to mastery.</h5>
+                    <h5 class="col-sm-4">learn and become a world class frontend developer with our popular frontend frameworks.</h5>
                     </div>
                 </div>
               </div>
@@ -77,7 +77,7 @@
                       <div class="row">
                       <img src="assets/icons/angular.png" class="bg col-sm-4" alt="" />
                       <h2 class="card-text col-sm-4 technology">Angular</h2>
-                      <h5 class="col-sm-4">Learn this popular framework, React is a front end libary in demand. learn react fundamentals to mastery.</h5>
+                      <h5 class="col-sm-4">learn and become a world class frontend developer with our popular frontend frameworks.</h5>
                       </div>
         s          </div>
                 </div>
@@ -88,7 +88,7 @@
                       <div class="row">
                       <img src="assets/icons/html.png" class="bg col-sm-4" alt="" />
                       <h2 class="card-text col-sm-4 technology">html, css $ js</h2>
-                      <h5 class="col-sm-4">Learn this popular framework, React is a front end libary in demand. learn react fundamentals to mastery.</h5>
+                      <h5 class="col-sm-4">learn and become a world class frontend developer with our popular frontend frameworks.</h5>
                       </div>
                   </div>
                 </div>
@@ -99,7 +99,7 @@
                       <div class="row">
                       <img src="assets/icons/node.png" class="bg col-sm-4" alt="" />
                       <h2 class="card-text col-sm-4 technology">nodejs</h2>
-                      <h5 class="col-sm-4">Learn this popular framework, React is a front end libary in demand. learn react fundamentals to mastery.</h5>
+                      <h5 class="col-sm-4">learn and become a world class backtend developer with our popular frontend frameworks.</h5>
                       </div>
                   </div>
                 </div>
@@ -110,7 +110,7 @@
                       <div class="row">
                       <img src="assets/icons/rails.jpg" class="img-fluid w-10 col-sm-4" alt="" />
                       <h2 class="card-text col-sm-4 technology">Rails</h2>
-                      <h5 class="col-sm-4">Learn this popular framework, React is a front end libary in demand. learn react fundamentals to mastery.</h5>
+                      <h5 class="col-sm-4">learn and become a world class frontend developer with our popular frontend frameworks.</h5>
                       </div>
                   </div>
                 </div>
@@ -123,7 +123,7 @@
           </div>
           </div>
     </section>
-    <section class=" d-sm-none d-lg-block" id="courses">
+    <section class=" d-sm-none d-md-none d-lg-block" id="courses">
         <div class="card-body bg-dark p-5">
           <div class="">
             <h2 class=" text-white text-center card-title">Our Courses</h2>
@@ -133,22 +133,22 @@
         <div class="col-lg-3 ml-3 p-5" >                
                 <img src="assets/icons/react.png"  alt="" />
                 <h2 class="desktopcoursetitle mt-2">REACT</h2>
-                <p class="text-white mt-4">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
+                <p class="text-white mt-4">learn and become a world class frontend developer with our popular frontend frameworks.</p>
               </div> 
               <div class="col-lg-3 ml-3 p-5">                
                 <img src="assets/icons/angular.png"  alt="" />
                 <h2 class="desktopcoursetitle mt-2">ANGULAR</h2>
-                <p class="text-white mt-4">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
+                <p class="text-white mt-4">learn and become a world class frontend developer with our popular frontend frameworks.</p>
               </div> 
               <div class="col-lg-3 ml-3 p-5">                
                 <img src="assets/icons/node.png"  alt="" />
                 <h2 class="desktopcoursetitle mt-2">NODE JS</h2>
-                <p class="text-white mt-4">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
+                <p class="text-white mt-4">learn and become a world class backend developer with our popular frontend frameworks.</p>
               </div> 
               <div class="col-lg-3 ml-3 p-5">                
                 <img src="assets/icons/rails.jpg"  alt="" />
                 <h2 class="desktopcoursetitle mt-2">RAILS</h2>
-                <p class="text-white mt-4">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
+                <p class="text-white mt-4">learn and become a world class frontend developer with our popular frontend frameworks.</p>
               </div> 
               </div>
               <div class="mt-3">
@@ -159,7 +159,7 @@
               </div> 
                  
     </section>
-    <section class=" d-sm-block d-lg-none p-5">
+    <section class=" d-sm-block d-md-block d-lg-none p-5">
         <div class="card-body">
             <h2 class="text-dark text-center ">Our Lecturers</h2>
         <hr class="line1">
@@ -191,7 +191,7 @@
                </a> 
                </div>  
                  </section>
-                 <section class="d-sm-none d-lg-block p-5 mt-5">
+                 <section class=" d-lg-block d-sm-none d-md-none p-5 mt-5">
                     <h2 class="text-dark text-center">Our Lecturers</h2>
                 <hr class="desktopline">
                 <div class="row">
