--- a/about.html
+++ b/about.html
@@ -24,11 +24,11 @@
       <section class="container headercontent">
         <header>
           <a href="#" class="logo">RICHES</a><span class="dot">.</span></a>
-          <div class="menuToggle" onclick="toggleMenu();"></div>
+          <div class="menuToggle toggler"></div>
           <ul class="navigation">
-              <li><a href="index.html" onclick="toggleMenu();">home</a></li>
-              <li><a href="about.html" onclick="toggleMenu();">about</a></li>
-              <li><a href="#alumnis" onclick="toggleMenu();">alumnis</a></li>
+              <li><a href="index.html" class="toggler">home</a></li>
+              <li><a href="about.html"  class="toggler">about</a></li>
+              <li><a href="#alumnis" class="toggler">alumnis</a></li>
           </ul>
       </header>
             <div class="mt-5  justify-content-center align-items-center" >
