--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
         <p class="title lead">here are some of our alumnis, with a brief summary of each of them.</p>
       </div>
       <div class=" row">
-        <div class="card  col-lg-4 col-md-6 col-sm-12 mb-3">
+        <div class="card col-sm-12 col-md-6 mb-3">
         <img src="assets/images/student3.jpg" class="card-img" alt="...">
         <div class="card-img-overlay">
           <h4 class="card-title">Caleb Smart</h4>
@@ -65,7 +65,7 @@
           <p class="card-text"><small>2019.</small></p>
         </div>
       </div>
-      <div class="card  col-lg-4 col-md-6 col-sm-12 mb-3">
+      <div class="card col-sm-12 col-md-6  mb-3">
         <img src="assets/images/student3.jpg" class="card-img" alt="...">
         <div class="card-img-overlay">
           <h4 class="card-title">James Craig</h4>
@@ -73,41 +73,9 @@
           <p class="card-text"><small>2019.</small></p>
         </div>
       </div>
-      <div class="card  col-lg-4 col-md-6 col-sm-12 mb-3">
-        <img src="assets/images/student3.jpg" class="card-img" alt="...">
-        <div class="card-img-overlay">
-          <h4 class="card-title">Davis You</h4>
-          <h5 class="card-text title"> FULLSTACK DEVELOPER</h5>
-          <p class="card-text"><small>2020.</small></p>
-        </div>
-      </div>
-      <div class="card  col-lg-4 col-md-6 col-sm-12 mb-3">
-        <img src="assets/images/student3.jpg." class="card-img" alt="...">
-        <div class="card-img-overlay">
-          <h4 class="card-title">Joe Smart</h4>
-          <h5 class="card-text title">FRONTEND DEVELOPER</h5>
-          <p class="card-text"><small>2022.</small></p>
-        </div>
-      </div>
-      <div class="card col-lg-4 col-md-6 col-sm-12 mb-3">
-        <img src="assets/images/student3.jpg." class="card-img" alt="...">
-        <div class="card-img-overlay">
-          <h4 class="card-title">Caleb Smart</h4>
-          <h5 class="card-text title">REACT</h5>
-          <p class="card-text"><small>2020.</small></p>
-        </div>
-      </div>
-      <div class="card text-dark col-lg-4 col-md-6 col-sm-12 mb-3">
-        <img src="assets/images/student3.jpg" class="card-img" alt="...">
-        <div class="card-img-overlay">
-          <h4 class="card-title">Caleb Smart</h4>
-          <h5 class="card-text title">FULLSTACK DEVELOPER</h5>
-          <p class="card-text"><small>2016.</small></p>
-        </div>
-      </div>
       </div>
     </section>
-    <section class="p-4 bg-dark mt-5 d-lg-none d-sm-block">
+    <section class="p-4 bg-dark mt-5 d-block d-md-none">
       <div class="card-body">
         <h2 class="text-white text-center ">Our Partners</h2>
     <div class="d-lg-flex justify-content-around ">
@@ -118,10 +86,16 @@
     </div>
     </div>
      </section>
-     <footer class="p-5 d-lg-block d-sm-block mt-5">
+     <footer class="p-5 bg-lg-dark mt-5">
       <div class="d-flex justify-content-between">
-      <h2>RichesLearning Institute</h2>
-      <p class="lead">@2022 a global web development institution</p>
+        <div class="d-flex justify-content-start">
+        <img src="assets/icons/logo.jpg">
+        <div>
+        <h2>Riches </h2>
+        <h2>Learning Institute</h2>
+        </div>
+        </div>
+      <p class="text-dark text-lg-white">@2022 a global web development institution</p>
       </div>
      </footer>
     </section>
