--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               </div>
              </main>
     <section class="d-block d-lg-none">
-        <div class="card coursescard p-3 ">
+        <div class="card maincard p-3 ">
             <div class="">
                 <h2 class=" text-white text-center card-title">Our Courses</h2>
             <hr class="line">
@@ -73,7 +73,7 @@
               </div>
             </div>
             <div class="col-sm-12 mt-3">
-                <div class="card coursescards">
+                <div class="card ">
                   <div class="card-body">
                       <div class="row">
                       <img src="assets/icons/angular.png" class="bg col-sm-4" alt="" />
@@ -84,7 +84,7 @@
                 </div>
               </div>
               <div class="col-sm-12 mt-3">
-                <div class="card coursescards">
+                <div class="card">
                   <div class="card-body">
                       <div class="row">
                       <img src="assets/icons/html.png" class="bg col-sm-4" alt="" />
@@ -95,7 +95,7 @@
                 </div>
               </div>
               <div class="col-sm-12 mt-3">
-                <div class="card coursescards">
+                <div class="card">
                   <div class="card-body">
                       <div class="row">
                       <img src="assets/icons/node.png" class="bg col-sm-4" alt="" />
@@ -106,7 +106,7 @@
                 </div>
               </div>
               <div class="col-sm-12 mt-3">
-                <div class="card coursescards">
+                <div class="card">
                   <div class="card-body">
                       <div class="row">
                       <img src="assets/icons/rails.jpg" class="img-fluid w-10 col-sm-4" alt="" />
@@ -125,34 +125,49 @@
           </div>
     </section>
     <section class=" d-none d-lg-block" id="courses">
-        <div class="card-body bg-dark p-5">
+        <div class="card-body maincard p-4">
           <div class="">
-            <h2 class=" text-white text-center card-title">Our Courses</h2>
-        <hr class="desktopline">
+            <h2 class=" text-white text-center card-title mb-3">Our Courses</h2>
         </div>
-          <div class="row">
-        <div class="col-lg-3 ml-3 p-5" >                
+          <div class="d-flex justify-content-center ">
+        <div class=""> 
+          <div class="card desktopcoursescard">
+            <div class="card-body">            
                 <img src="assets/icons/react.png"  alt="" />
                 <h2 class="desktopcoursetitle mt-2">REACT</h2>
                 <p class="text-white mt-4">learn and become a world class frontend developer with our popular frontend frameworks.</p>
               </div> 
-              <div class="col-lg-3 ml-3 p-5">                
+              </div>
+              </div>
+              <div class=""> 
+                <div class="card desktopcoursescard">
+                  <div class="card-body">                
                 <img src="assets/icons/angular.png"  alt="" />
                 <h2 class="desktopcoursetitle mt-2">ANGULAR</h2>
                 <p class="text-white mt-4">learn and become a world class frontend developer with our popular frontend frameworks.</p>
               </div> 
-              <div class="col-lg-3 ml-3 p-5">                
+              </div>
+              </div>
+              <div class=""> 
+                <div class="card desktopcoursescard">
+                  <div class="card-body">                
                 <img src="assets/icons/node.png"  alt="" />
                 <h2 class="desktopcoursetitle mt-2">NODE JS</h2>
                 <p class="text-white mt-4">learn and become a world class backend developer with our popular frontend frameworks.</p>
               </div> 
-              <div class="col-lg-3 ml-3 p-5">                
+              </div>
+              </div>
+              <div class=""> 
+                <div class="card desktopcoursescard">
+                  <div class="card-body">                
                 <img src="assets/icons/rails.jpg"  alt="" />
                 <h2 class="desktopcoursetitle mt-2">RAILS</h2>
                 <p class="text-white mt-4">learn and become a world class frontend developer with our popular frontend frameworks.</p>
               </div> 
               </div>
-              <div class="mt-3">
+              </div>
+              </div>
+              <div class="mt-5">
                 <a href='#'class=" text-center">
                  <h3 class="title">Join Us Now!</h3>
                 </a>
@@ -163,8 +178,7 @@
     <section class=" d-block d-lg-none p-5">
         <div class="card-body">
             <h2 class="text-dark text-center ">Our Lecturers</h2>
-        <hr class="line1">
-            <div class="col-sm-12 mt-4">
+            <div class="col-12 mt-4">
                 <div class="card-body">
                     <div  id="7" class="row lecturers">
                     <img src="assets/images/person1.jpg" class="bg col-sm-6" alt="" />
@@ -175,7 +189,8 @@
                   </div>  
                 </div>
               </div>
-              <div class="col-sm-12 mt-4">
+              </div>
+              <div class="col-12 mt-4">
                 <div class="card-body">
                     <div id="6" class="row lecturers">
                     <img src="assets/images/person1.jpg" class="bg col-sm-6" alt="" />
@@ -186,10 +201,11 @@
                   </div>  
                 </div>
               </div>
+              </div>
               <div class="mt-5">
               <a href='#'class="card-body text-center ">
-                <h3 class="title">See More!</h3>
-               </a> 
+                <button type="button" class="btn btn-outline-secondary" disabled>MORE</button>
+              </a> 
                </div>  
                  </section>
                  <section class="d-none d-lg-block p-5 mt-5">
@@ -281,10 +297,16 @@
                 </div>
                 </div>
                  </section>
-                 <footer class="p-5 d-lg-block d-sm-none">
-                  <div class="d-block  d-lg-flex justify-content-between ">
-                  <h2>RichesLearning Institute</h2>
-                  <p class="lead">@2022 a global web development institution</p>
+                 <footer class="p-5 d-none d-lg-block bg-white">
+                  <div class="d-flex justify-content-between">
+                    <div class="d-flex justify-content-start">
+                    <img src="assets/icons/logo.jpg">
+                    <div>
+                    <h2>Riches </h2>
+                    <h2>Learning Institute</h2>
+                    </div>
+                    </div>
+                  <p class="text-dark text-lg-white">@2022 a global web development institution</p>
                   </div>
                  </footer>
     </section>
