--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
               <li><a href="#alumnis" class="toggler">alumnis</a></li>
           </ul>
       </header>
-            <div class="mt-5  justify-content-center align-items-center" >
+            <div class="mt-5  justify-content-center align-items-center p-3 pt-5" >
               <h3 class="greeting">hi There,</h3>
               <h1 class="title">
                 The E-learning Platform That Simplifies Online Training!
@@ -39,14 +39,14 @@
               <h2 class="title">Fulfill your dream of becoming a world class web developer.</h2></2>
               <div class="card mt-4 mt-m-5">
                 <div class="card-body">
-                  <h4 class="text card-text grey">
+                  <h6 class="text card-text grey">
                     Quality education does not need to be in the traditional classroom setting, we are an organisation that is passionate about technology and we are fully committed to investing in the world of technology, join many around the world to learn from the comfort of your home. Save up to 75% with a scholarship. 
-                  </h4>
+                  </h6>
                 </div>
               </div>
               <div class="mt-3 mt-m-5 mb-m-4">
-                <h4 class="grey">Please contact us for any question or further enquiries</h4>
-                <h4 class="grey">riches@gmail.com</h4>
+                <h6 class="grey">Please contact us for any question or further enquiries</h6>
+                <h6 class="grey">riches@gmail.com</h6>
               </div>
             </div>
             </section>
