--- a/index.html
+++ b/index.html
@@ -58,60 +58,61 @@
         <div class="card maincard p-3 ">
             <div class="">
                 <h2 class=" text-white text-center card-title">Our Courses</h2>
-            <hr class="line">
+            <hr class="line m-auto">
             </div>
         <div class="row">
-            <div class="col-sm-12 mt-4">
-              <div class="card coursescards">
-                <div class="card-body">
-                    <div class="row">
-                    <img src="assets/icons/react.png" class="bg col-sm-4"h alt="" />
-                    <h2 class="card-text col-sm-4 technology">React</h2>
-                    <h5 class="col-sm-4">learn and become a world class frontend developer with our popular frontend frameworks.</h5>
-                    </div>
-                </div>
+          <div class="col-12 mt-4">
+            <div class="card coursescards shadow">
+              <div class="card-body">
+                  <div class="row">
+                  <img src="assets/icons/react.png" class="bg col-3" alt="">
+                  <h6 class="card-text col-2 technology m-auto">React</h6>
+                  <h6 class="col-7 m-auto">learn and become a world class frontend developer with our popular frontend frameworks.</h6>
+                  </div>
               </div>
             </div>
-            <div class="col-sm-12 mt-3">
+          </div>
+
+            <div class="col-12 mt-3">
                 <div class="card ">
                   <div class="card-body">
                       <div class="row">
-                      <img src="assets/icons/angular.png" class="bg col-sm-4" alt="" />
-                      <h2 class="card-text col-sm-4 technology">Angular</h2>
-                      <h5 class="col-sm-4">learn and become a world class frontend developer with our popular frontend frameworks.</h5>
-                      </div>
-        s          </div>
-                </div>
-              </div>
-              <div class="col-sm-12 mt-3">
-                <div class="card">
-                  <div class="card-body">
-                      <div class="row">
-                      <img src="assets/icons/html.png" class="bg col-sm-4" alt="" />
-                      <h2 class="card-text col-sm-4 technology">html, css $ js</h2>
-                      <h5 class="col-sm-4">learn and become a world class frontend developer with our popular frontend frameworks.</h5>
+                      <img src="assets/icons/angular.png" class="bg col-3" alt="" />
+                      <h6 class="card-text col-2 technology m-auto">Angula</h6>
+                      <h6 class="col-7 m-auto">learn and become a world class frontend developer with our popular frontend frameworks.</h6>
                       </div>
                   </div>
                 </div>
               </div>
-              <div class="col-sm-12 mt-3">
+              <div class="col-12 mt-3">
                 <div class="card">
                   <div class="card-body">
                       <div class="row">
-                      <img src="assets/icons/node.png" class="bg col-sm-4" alt="" />
-                      <h2 class="card-text col-sm-4 technology">nodejs</h2>
-                      <h5 class="col-sm-4">learn and become a world class backtend developer with our popular frontend frameworks.</h5>
+                      <img src="assets/icons/html.png" class="bg col-3" alt="" />
+                      <h6 class="card-text col-2 technology  m-auto">html, css $ js</h6>
+                      <h6 class="col-7 m-auto">learn and become a world class frontend developer with our popular frontend frameworks.</h6>
                       </div>
                   </div>
                 </div>
               </div>
-              <div class="col-sm-12 mt-3">
+              <div class="col-12 mt-3">
                 <div class="card">
                   <div class="card-body">
                       <div class="row">
-                      <img src="assets/icons/rails.jpg" class="img-fluid w-10 col-sm-4" alt="" />
-                      <h2 class="card-text col-sm-4 technology">Rails</h2>
-                      <h5 class="col-sm-4">learn and become a world class frontend developer with our popular frontend frameworks.</h5>
+                      <img src="assets/icons/node.png" class="bg col-3" alt="" />
+                      <h6 class="card-text col-2 technology  m-auto">nodejs</h6>
+                      <h6 class="col-7 m-auto">learn and become a world class backtend developer with our popular frontend frameworks.</h6>
+                      </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 mt-3">
+                <div class="card">
+                  <div class="card-body">
+                      <div class="row">
+                      <img src="assets/icons/rails.jpg" class="img-fluid w-10 col-3" alt="" />
+                      <h6 class="card-text col-2 technology  m-auto">Rails</h6>
+                      <h6 class="col-7 m-auto">learn and become a world class frontend developer with our popular frontend frameworks.</h6>
                       </div>
                   </div>
                 </div>
@@ -181,8 +182,8 @@
             <div class="col-12 mt-4">
                 <div class="card-body">
                     <div  id="7" class="row lecturers">
-                    <img src="assets/images/person1.jpg" class="bg col-sm-6" alt="" />
-                    <div class="col-sm-6">
+                    <img src="assets/images/person1.jpg" class="bg col-6" alt="" />
+                    <div class="col-6">
                     <h2 class='name'>James Brown</h2>
                     <h5 class="title"id='position'>Former ICT director at Microsoft</h5>
                     <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
@@ -193,8 +194,8 @@
               <div class="col-12 mt-4">
                 <div class="card-body">
                     <div id="6" class="row lecturers">
-                    <img src="assets/images/person1.jpg" class="bg col-sm-6" alt="" />
-                    <div class="col-sm-6">
+                    <img src="assets/images/person1.jpg" class="bg col-6" alt="" />
+                    <div class="col-6">
                     <h2 class="name">Angela Leo</h2>
                     <h5 class="title"id="position">Chief Technical officer at Riches Institutes</h5>
                     <p id="description">Angela is a seasoned web developer with many years of experience in various languages and frameworks</p>
@@ -202,11 +203,9 @@
                 </div>
               </div>
               </div>
-              <div class="mt-5">
-              <a href='#'class="card-body text-center ">
-                <button type="button" class="btn btn-outline-secondary" disabled>MORE</button>
-              </a> 
-               </div>  
+               <div class="d-grid gap-2 mt-5">
+                <button class="btn btn-outline-secondary" disabled type="button">MORE</button>
+              </div>  
                  </section>
                  <section class="d-none d-lg-block p-5 mt-5">
                     <h2 class="text-dark text-center">Our Lecturers</h2>
