--- a/about.html
+++ b/about.html
@@ -24,7 +24,12 @@
       <section class="container headercontent">
         <header>
           <a href="#" class="logo">RICHES</a><span class="dot">.</span></a>
-          <div class="menuToggle toggler"></div>
+          <div class="menuToggle toggler">
+          
+            <div class="hamburger"></div>
+            <div class="hamburger"></div>
+            <div class="hamburger"></div>
+            </div>
           <ul class="navigation">
               <li><a href="index.html" class="toggler">home</a></li>
               <li><a href="about.html"  class="toggler">about</a></li>
