--- a/index.html
+++ b/index.html
@@ -190,16 +190,16 @@
           <hr class="line m-auto">
           <div class="col-12 mt-4">
               <div class="card-body">
-                  <div  id="7" class="row lecturers">
-                  <img src="assets/images/person1.jpg" class="bg col-4" alt="" />
-                  <div class="col-8">
+                  <div id='0' class="row lecturers">
+                  <img src="assets/images/person1.jpg" class="bg col-6" alt="" />
+                  <div class="col-6">
                   <h2 class='name'>James Brown</h2>
                     <h6 class="title"id='position'>Former ICT director at Microsoft</h6>
                     <div class="w-25">
                       <hr class="desktopline w-50">
                     </div>                 
 
-                  <p id="description d-none">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
+                  <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
                 </div>  
               </div>
             </div>
@@ -207,9 +207,9 @@
 
             <div class="col-12 mt-4">
               <div class="card-body">
-                  <div id="6" class="row lecturers">
-                  <img src="assets/images/person1.jpg" class="bg col-4" alt="" />
-                  <div class="col-8">
+                  <div id='1' class="row lecturers">
+                  <img src="assets/images/person1.jpg" class="bg col-6" alt="" />
+                  <div class="col-6">
                   <h2 class="name">Angela Leo</h2>
                   <h6 class="title"id="position">Chief Technical officer at Riches Institutes</h6>
                   <div class="w-25">
@@ -235,7 +235,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
                         <div class="card-body">
-                            <div id="0" class="row lecturers">
+                            <div id='2' class="row lecturers">
                             <img src="assets/images/person1.jpg" class="col-lg-6" alt="" />
                             <div class="col-lg-6">
                             <h2 class="name">James Brown</h2>
@@ -245,67 +245,72 @@
                         </div>
                      </div> 
                      </div>
-                      <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
-                        <div class="card-body">
-                            <div id="1" class="row lecturers">
-                            <img src="assets/images/person1.jpg" class="bg col-lg-6" alt="" />
-                            <div class="col-lg-6">
-                            <h2 class='name'>Angela Leo</h2>
-                            <h5 class="title"id='position'>Chief Technical officer at Riches Institutes</h5>
-                            <p id="description">Angela is a seasoned web developer with many years of experience in various languages and frameworks</p>
-                          </div>  
-                        </div>
-                      </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
-                          <div class="card-body">
-                              <div id="2" class="row lecturers">
-                              <img src="assets/images/person1.jpg" class="col-lg-6" alt="" />
-                              <div class="col-lg-6">
-                              <h2 class="name">James Brown</h2>
-                              <h5 class="title" id="position">Former ICT director at Microsoft</h5>
-                              <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
-                            </div>  
-                          </div>
-                       </div> 
-                       </div>
-                       <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
-                        <div class="card-body">
-                            <div id="3" class="row lecturers">
-                            <img src="assets/images/person1.jpg" class="col-lg-6" alt="" />
-                            <div class="col-lg-6">
-                            <h2 class='name'>James Brown</h2>
-                            <h5 class="title"id='position'>Former ICT director at Microsoft</h5>
-                            <p id='description'>James is a seasoned web developer with many years of experience in various languages and frameworks</p>
-                          </div>  
-                        </div>
-                     </div> 
-                     </div>
-                     <div id="5" class="col-lg-6 col-md-6 col-sm-12 mb-3">
+
+                     <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
                       <div class="card-body">
-                          <div id="4" class="row lecturers">
+                          <div id='3' class="row lecturers">
                           <img src="assets/images/person1.jpg" class="col-lg-6" alt="" />
                           <div class="col-lg-6">
-                          <h2 class='name'>James Brown</h2>
-                          <h5 class="title"id='position'>Former ICT director at Microsoft</h5>
+                          <h2 class="name">James Brown</h2>
+                          <h5 class="title" id="position">Former ICT director at Microsoft</h5>
                           <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
                         </div>  
                       </div>
                    </div> 
                    </div>
+
                    <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
                     <div class="card-body">
-                        <div id="5" class="row lecturers">
+                        <div id='4' class="row lecturers">
                         <img src="assets/images/person1.jpg" class="col-lg-6" alt="" />
                         <div class="col-lg-6">
-                        <h2 class='name'>James Brown</h2>
-                        <h5 class="title"id='position'>Former ICT director at Microsoft</h5>
+                        <h2 class="name">James Brown</h2>
+                        <h5 class="title" id="position">Former ICT director at Microsoft</h5>
                         <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
                       </div>  
                     </div>
                  </div> 
                  </div>
-                        </div>
+
+                 <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
+                  <div class="card-body">
+                      <div id='5' class="row lecturers">
+                      <img src="assets/images/person1.jpg" class="col-lg-6" alt="" />
+                      <div class="col-lg-6">
+                      <h2 class="name">James Brown</h2>
+                      <h5 class="title" id="position">Former ICT director at Microsoft</h5>
+                      <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
+                    </div>  
+                  </div>
+               </div> 
+               </div>
+
+               <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
+                <div class="card-body">
+                    <div id='6' class="row lecturers">
+                    <img src="assets/images/person1.jpg" class="col-lg-6" alt="" />
+                    <div class="col-lg-6">
+                    <h2 class="name">James Brown</h2>
+                    <h5 class="title" id="position">Former ICT director at Microsoft</h5>
+                    <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
+                  </div>  
+                </div>
+             </div> 
+             </div>
+
+             <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
+              <div class="card-body">
+                  <div id='7' class="row lecturers">
+                  <img src="assets/images/person1.jpg" class="col-lg-6" alt="" />
+                  <div class="col-lg-6">
+                  <h2 class="name">James Brown</h2>
+                  <h5 class="title" id="position">Former ICT director at Microsoft</h5>
+                  <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
+                </div>  
+              </div>
+           </div> 
+           </div>
+          </div>
                  </section>
                  <section class="pt-3 bg-dark mt-3 m-auto text-center">
                   <div class="card-body text-center">
