fixed all changes mentioned by code reviewer

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
             <li><a href="#courses" class="toggler">courses</a></li>
         </ul>
     </header>
-            <div class=" container justify-content-center justify-content-lg-start pt-lg-2 mt-5 pt-sm-5">
+            <div class=" first-div container justify-content-center justify-content-lg-start pt-lg-2 mt-5 pt-sm-5">
               <h3 class="greeting">hi There,</h3>
               <h1 class="title">
                 The E-learning Platform That Simplifies Online Training!
               </h1>
               <h2 class="title">Fulfill your dream of becoming a world class web developer.</h2></2>
-              <div class="card mt-4">
-                <div class="card-body">
+              <div class="mt-4">
+                <div>
                   <h4 class="text card-text grey">
                     Riches online learning is the simplest and most effective
                     learning management system to master web development
@@ -227,7 +227,7 @@
 
             </div>  
                </section>
-                 <section class="d-none d-md-block p-3">
+                 <section class="d-none d-md-block p-3 w-75 m-auto">
                     <h2 class="text-dark text-center">Our Lecturers</h2>
                 <div class="pb-3">
                   <hr class="desktopline m-auto">
@@ -240,6 +240,7 @@
                             <div class="col-lg-6">
                             <h2 class="name">James Brown</h2>
                             <h5 class="title"id="position">Former ICT director at Microsoft</h5>
+                            <hr class="w-25">
                             <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
                           </div>  
                         </div>
@@ -253,6 +254,7 @@
                           <div class="col-lg-6">
                           <h2 class="name">James Brown</h2>
                           <h5 class="title" id="position">Former ICT director at Microsoft</h5>
+                          <hr class="w-25">
                           <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
                         </div>  
                       </div>
@@ -266,6 +268,7 @@
                         <div class="col-lg-6">
                         <h2 class="name">James Brown</h2>
                         <h5 class="title" id="position">Former ICT director at Microsoft</h5>
+                        <hr class="w-25">
                         <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
                       </div>  
                     </div>
@@ -279,6 +282,7 @@
                       <div class="col-lg-6">
                       <h2 class="name">James Brown</h2>
                       <h5 class="title" id="position">Former ICT director at Microsoft</h5>
+                      <hr class="w-25">
                       <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
                     </div>  
                   </div>
@@ -292,6 +296,7 @@
                     <div class="col-lg-6">
                     <h2 class="name">James Brown</h2>
                     <h5 class="title" id="position">Former ICT director at Microsoft</h5>
+                    <hr class="w-25">
                     <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
                   </div>  
                 </div>
@@ -305,6 +310,7 @@
                   <div class="col-lg-6">
                   <h2 class="name">James Brown</h2>
                   <h5 class="title" id="position">Former ICT director at Microsoft</h5>
+                  <hr class="w-25">
                   <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
                 </div>  
               </div>
