fixed all reviewed changes

--- a/index.html
+++ b/index.html
@@ -70,21 +70,21 @@
             </div>
         <div class="row">
           <div class="col-12 mt-4">
-            <div class="card shadow">
-              <div class="card-body">
-                  <div class="row">
+            <div class="card grey-mobile">
+              <div class="card-body bg-dark">
+                  <div class="row text-white">
                   <img src="assets/icons/react.png" class="bg col-3 img-fluid" alt="">
                   <p class="card-text col-3 technology m-auto">React</p>
-                  <h6 class="col-6 m-auto">learn and become a world class frontend developer with our popular frontend frameworks.</h6>
+                  <h6 class="col-6 m-auto texter">learn and become a world class frontend developer with our popular frontend frameworks.</h6>
                   </div>
               </div>
             </div>
           </div>
 
             <div class="col-12 mt-3">
-                <div class="card ">
-                  <div class="card-body">
-                      <div class="row">
+                <div class="card grey-mobile">
+                  <div class="card-body bg-dark">
+                      <div class="row text-white">
                       <img src="assets/icons/angular.png" class="bg col-3 img-fluid" alt="" />
                       <p class="card-text col-3 technology m-auto">Angula</p>
                       <h6 class="col-6 m-auto">learn and become a world class frontend developer with our popular frontend frameworks.</h6>
@@ -93,9 +93,9 @@
                 </div>
               </div>
               <div class="col-12 mt-3">
-                <div class="card mobilecoursescard">
-                  <div class="card-body">
-                      <div class="row">
+                <div class="card mobilecoursescard grey-mobile">
+                  <div class="card-body bg-dark">
+                      <div class="row text-white">
                       <img src="assets/icons/html.png" class="bg col-3 img-fluid" alt="" />
                       <p class="card-text col-3 technology  m-auto">html and css</p>
                       <h6 class="col-6 m-auto">learn and become a world class frontend developer with our popular frontend frameworks.</h6>
@@ -104,9 +104,9 @@
                 </div>
               </div>
               <div class="col-12 mt-3">
-                <div class="card mobilecoursescard">
-                  <div class="card-body">
-                      <div class="row">
+                <div class="card mobilecoursescard grey-mobile">
+                  <div class="card-body bg-dark">
+                      <div class="row text-white">
                       <img src="assets/icons/node.png" class="bg col-3 img-fluid" alt="" />
                       <p class="card-text col-3 technology  m-auto">nodejs</p>
                       <h6 class="col-6 m-auto">learn and become a world class backtend developer with our popular frontend frameworks.</h6>
@@ -115,9 +115,9 @@
                 </div>
               </div>
               <div class="col-12 mt-3">
-                <div class="card">
-                  <div class="card-body">
-                      <div class="row justify-content-between">
+                <div class="card grey-mobile">
+                  <div class="card-body bg-dark">
+                      <div class="row justify-content-between text-white">
                       <img src="assets/icons/rails.jpg" class="col-3" alt="" />
                       <small class="card-text col-3 technology m-auto">Ruby & Rails</small>
                       <h6 class="col-6 m-auto">learn and become a world class frontend developer with our popular frontend frameworks.</h6>
@@ -141,8 +141,8 @@
           <div class="d-flex justify-content-center ">
         <div class=""> 
           <div class="card desktopcoursescard">
-            <div class="card-body">            
-                <img src="assets/icons/react.png"  alt="" />
+            <div class="card-body text-center w-75 m-auto">            
+                <img src="assets/icons/react.png" class="w-50"  alt="" />
                 <h2 class="desktopcoursetitle mt-2">REACT</h2>
                 <p class="text-white mt-4">learn and become a world class frontend developer with our popular frontend frameworks.</p>
               </div> 
@@ -150,8 +150,8 @@
               </div>
               <div class=""> 
                 <div class="card desktopcoursescard">
-                  <div class="card-body">                
-                <img src="assets/icons/angular.png"  alt="" />
+                  <div class="card-body text-center">                
+                <img src="assets/icons/angular.png" class="w-25" alt="" />
                 <h2 class="desktopcoursetitle mt-2">ANGULAR</h2>
                 <p class="text-white mt-4">learn and become a world class frontend developer with our popular frontend frameworks.</p>
               </div> 
@@ -159,8 +159,8 @@
               </div>
               <div class=""> 
                 <div class="card desktopcoursescard">
-                  <div class="card-body">                
-                <img src="assets/icons/node.png"  alt="" />
+                  <div class="card-body text-center">                
+                <img src="assets/icons/node.png" class="w-25"  alt="" />
                 <h2 class="desktopcoursetitle mt-2">NODE JS</h2>
                 <p class="text-white mt-4">learn and become a world class backend developer with our popular frontend frameworks.</p>
               </div> 
@@ -168,8 +168,8 @@
               </div>
               <div class=""> 
                 <div class="card desktopcoursescard">
-                  <div class="card-body">                
-                <img src="assets/icons/rails.jpg"  alt="" />
+                  <div class="card-body text-center">                
+                <img src="assets/icons/rails.jpg" class="w-25"  alt="" />
                 <h2 class="desktopcoursetitle mt-2">RAILS</h2>
                 <p class="text-white mt-4">learn and become a world class frontend developer with our popular frontend frameworks.</p>
               </div> 
