--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         <h2 class="name">James Brown</h2>
                         <h5 class="title" id="position">Former ICT director at Microsoft</h5>
                         <hr class="w-25">
-                        <p id="description">Leo is a seasoned web developer with many years of experience in various languages and frameworks</p>
+                        <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
                       </div>  
                     </div>
                  </div> 
