--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <title>e-learning-platform</title>
   </head>
   <body>
-    <header class="topnav bg-dark d-flex justify-content-end p-1 m-1">
+    <header class="topnav bg-dark d-none d-md-flex justify-content-end p-1 m-1">
       <div class="about-header-links p-1">
         <a class="p-3 text-white" href="#"><i class="fa-brands fa-facebook-f"></i></a>
         <a class="p-1 text-white" href="#"><i class="fa-brands fa-youtube"></i></a>
@@ -110,8 +110,8 @@
         </div>
         </div>
         <div class="w-75">
-          <p class="text-dark text-lg-white px-5">@2022 a global web development institution</p>
-          <p class="text-dark text-lg-white px-5 mt-0">call us on: +233-90-98-7789-34 or email us at e-learning@gmail.com. We will be glad to hear from you!</p>
+          <p class=" text-md-white px-5">@2022 a global web development institution</p>
+          <p class=" text-md-white px-5 mt-0 d-none d-md-block">call us on: +233-90-98-7789-34 or email us at e-learning@gmail.com. We will be glad to hear from you!</p>
         </div>
       </div>
      </footer>
