--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>e-learning-platformm</title>
   </head>
   <body>
-    <header class="topnav bg-dark d-flex justify-content-end p-1 m-1">
+    <header class="topnav bg-dark d-none d-md-flex justify-content-end p-1 m-1">
       <div class="header-links p-1">
         <a class="p-3 text-white" href="#"><i class="fa-brands fa-facebook-f"></i></a>
         <a class="p-1 text-white" href="#"><i class="fa-brands fa-youtube"></i></a>
