reviewers changes made

--- a/about.html
+++ b/about.html
@@ -18,6 +18,8 @@
     <title>e-learning-platform</title>
   </head>
   <body>
+    <div class="main-about-body">
+    <div class="about-parent">
     <header class="topnav bg-dark d-none d-md-flex justify-content-end p-1 m-1">
       <div class="about-header-links p-1">
         <a class="p-3 text-white" href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -25,7 +27,7 @@
         <a class="p-3 text-white" href="#">Logout</a>
       </div>
     </header>
-        <nav class="mt-5">
+        <nav class="">
           <a href="index.html" class="logo">RICHES</a><span class="dot">.</span></a>
           <div class="menuToggle toggler">
           
@@ -40,31 +42,34 @@
           </ul>
         </nav>
       <main class="topmost">
-        <section class="headercontent" >
+        <section class="headercontent text-center" >
           <section class="header-bg">
-            <div class="mt-5 container first-div justify-content-center align-items-center p-3 pt-5" >
-              <h3 class="greeting">Hi There,</h3>
-              <h1 class="title titlewidth">
+            <div class="container first-div justify-content-center align-items-center p-3 pt-5" >
+              <h1 class="title titlewidth mx-5 mx-md-0 d-none d-md-block">
                 The Best E-learning Platform!
               </h1>
+              <h5 class="title titlewidth mx-5 mx-md-0 d-block d-md-none">
+                The Best E-learning Platform!
+              </h5>
               <div class="card mt-4 mt-m-5">
                 <div class="card-body">
                   <p class="text card-text grey lead">
-                    Quality education does not need to be in the traditional classroom setting, we are an organisation that is passionate about technology and we are fully committed to investing in the world of technology, join many around the world to learn from the comfort of your home. Save up to 75% with a scholarship. 
+                    Quality education does not need to be in the 
+                    traditional classroom setting, we are an organisation 
+                    that is passionate about technology.
                   </p>
                 </div>
               </div>
               <div class="mt-3 mt-m-5 mb-m-4">
-                <p class="grey lead">Please contact us for any question or further enquiries</p>
-                <p class="grey lead">riches@gmail.com</p>
+                <p class="grey lead text-center">Please contact us for any question or further enquiries riches@gmail.com</p>
               </div>
             </div>
             </section>
           </section>
-    <section id="alumnis" class="mt-5 justify-content-center align-items-center container">
-      <div class="">
-        <h1 class="text1">See Our Alumnis</h1>
-        <p class="title lead">here are some of our alumnis, with a brief summary of each of them.</p>
+    <section id="alumnis" class="mt-5 justify-content-center align-items-center p-4 p-md-5 m-auto m-5">
+      <div class="alumni-head">
+        <h1 class="text1 text-center">See Our Alumnis</h1>
+        <p class="title lead text-center m-4 m-md-0">here are some of our alumnis, with a brief summary of each of them.</p>
       </div>
       
       <div class="row">
@@ -101,7 +106,7 @@
      </section>
 
      <footer class="p-5 about-footer">
-      <div class=" w-75 d-flex justify-content-start m-auto">
+      <div class="about-footer-content w-75 d-flex justify-content-start m-auto">
         <div class="d-flex justify-content-start mx-1 px-5">
         <img src="assets/icons/logo.jpg" class=" w-25 m-auto">
         <div class="m-auto">
@@ -110,13 +115,15 @@
         </div>
         </div>
         <div class="w-75">
-          <p class=" text-md-white px-5">@2022 a global web development institution</p>
-          <p class=" text-md-white px-5 mt-0 d-none d-md-block">call us on: +233-90-98-7789-34 or email us at e-learning@gmail.com. We will be glad to hear from you!</p>
+          <p class="text-md-white px-5">@2022 a global web development institution</p>
+          <p class="text-md-white px-5 mt-0 d-none d-md-block">call us on: +233-90-98-7789-34 or email us at e-learning@gmail.com. We will be glad to hear from you!</p>
         </div>
       </div>
      </footer>
 
     </main>
         <script src="hamburger.js"></script>
+  </div>
+  </div>
     </body>
 
