--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
     <title>e-learning-platformm</title>
   </head>
   <body>
-    <header class="header topnav bg-dark d-none d-md-flex justify-content-end p-1 m-1">
-      <div class="header-links p-1">
+    <div class="main-index-body">
+    <div class="parent">
+    <header class="topnav bg-dark d-none d-md-flex justify-content-end p-1 m-1">
+      <div class="header-links px-5 mx-4">
         <a class="p-3 text-white" href="#"><i class="fa-brands fa-facebook-f"></i></a>
         <a class="p-1 text-white" href="#"><i class="fa-brands fa-youtube"></i></a>
         <a class="p-3 text-white" href="#">Logout</a>
       </div>
     </header>
-      <nav class="header p-5 mt-2">
+      <nav class="my-header bg-white">
         <a href="#" class="logo">RICHES</a>
         <div class="menuToggle toggler"> 
         <div class="hamburger"></div>
@@ -47,7 +49,7 @@
         <div class="header-bg ">
             <div class=" first-div container justify-content-center justify-content-md-start pt-5">
               <h3 class="greeting">Hi There,</h3>
-              <h1 class="title titlewidth">
+              <h1 class="title titlewidth text-start">
                 The Best E-learning Platform!
               </h1>
               <div class="card mt-4 w-75">
@@ -60,14 +62,16 @@
                     </div>
               </div>
               <div class="mt-3 mt-lg-4 ">
-                <p class="text1 grey lead">You can learn Anytime and Anywhere.</p>
-                <p class="text2 grey lead">So lets start learning web development.</p>
+                <p class="text1 grey lead d-none d-md-block mt-4">You can learn Anytime and Anywhere.</p>
+                <p class="lead text-center d-block d-md-none">You can learn Anytime and Anywhere.</p>
+
+                <p class="text2 grey lead d-none d-md-block">So lets start learning web development.</p>
               </div>
               </div>
               </div>
               </section>
     <section class="d-block d-lg-none mobilecourse">
-        <div class="card maincard p-3 ">
+        <div class="card maincard p-3 mx-3">
             <div class="">
                 <h2 class=" text-white text-center card-title">Our Courses</h2>
             <hr class="line m-auto">
@@ -79,7 +83,7 @@
                   <div class="row text-white">
                   <img src="assets/icons/react.png" class="bg col-3 img-fluid" alt="">
                   <h6 class="card-text col-3 technology m-auto">React</h6>
-                  <p class="col-6 m-auto texter">learn and become a world class frontend developer with our popular frontend frameworks.</p>
+                  <p class="col-6 m-auto texter">learn and become a world class developer.</p>
                   </div>
               </div>
             </div>
@@ -91,7 +95,7 @@
                       <div class="row text-white">
                       <img src="assets/icons/angular.png" class="bg col-3 img-fluid" alt="" />
                       <h6 class="card-text col-3 technology m-auto">Angula</h6>
-                      <p class="col-6 m-auto">learn and become a world class frontend developer with our popular frontend frameworks.</p>
+                      <p class="col-6 m-auto">Become a world class angular developer.</p>
                       </div>
                   </div>
                 </div>
@@ -102,7 +106,7 @@
                       <div class="row text-white">
                       <img src="assets/icons/html.png" class="bg col-3 img-fluid" alt="" />
                       <h6 class="card-text col-3 technology  m-auto">html and css</h6>
-                      <p class="col-6 m-auto">learn and become a world class frontend developer with our popular frontend frameworks.</p>
+                      <p class="col-6 m-auto">Become a world class html creator</p>
                       </div>
                   </div>
                 </div>
@@ -113,7 +117,7 @@
                       <div class="row text-white">
                       <img src="assets/icons/node.png" class="bg col-3 img-fluid" alt="" />
                       <h6 class="card-text col-3 technology  m-auto">nodejs</h6>
-                      <p class="col-6 m-auto">learn and become a world class backtend developer with our popular frontend frameworks.</p>
+                      <p class="col-6 m-auto">Become a world class node developer.</p>
                       </div>
                   </div>
                 </div>
@@ -124,7 +128,7 @@
                       <div class="row justify-content-between text-white">
                       <img src="assets/icons/rails.jpg" class="col-3" alt="" />
                       <h6 class="card-text col-3 technology m-auto">Ruby & Rails</h6>
-                      <p class="col-6 m-auto">learn and become a world class frontend developer with our popular frontend frameworks.</p>
+                      <p class="col-6 m-auto">Become a world class ruby developer.</p>
                       </div>
                   </div>
                 </div>
@@ -197,7 +201,9 @@
                   <div id='0' class="row lecturers">
                   <img src="assets/images/person1.jpg" class="bg col-6" alt="" />
                   <div class="col-6">
-                  <h2 class='name'>James Brown</h2>
+                  <h6 class='name fw-bold'>James Brown</h6>
+                  <!-- <p class='name'>James Brown</p> -->
+
                     <h6 class="title"id='position'>Former ICT director at Microsoft</h6>
                     <div class="w-25">
                       <hr class="desktopline w-50">
@@ -214,7 +220,7 @@
                   <div id='1' class="row lecturers">
                   <img src="assets/images/person1.jpg" class="bg col-6" alt="" />
                   <div class="col-6">
-                  <h2 class="name">Angela Leo</h2>
+                  <h6 class="name fw-bold">Angela Leo</h6>
                   <h6 class="title"id="position">Chief Technical officer at Riches Institutes</h6>
                   <div class="w-25">
                     <hr class="desktopline w-50">
@@ -236,8 +242,8 @@
                             <div id='2' class="row lecturers">
                             <img src="assets/images/person1.jpg" class="col-lg-6" alt="" />
                             <div class="col-lg-6">
-                            <h2 class="name">James Brown</h2>
-                            <h5 class="title"id="position">Former ICT director at Microsoft</h5>
+                            <h5 class="name fw-bold">James Brown</h5>
+                            <h6 class="title"id="position">Former ICT director at Microsoft</h6>
                             <hr class="w-25">
                             <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
                           </div>  
@@ -250,8 +256,8 @@
                           <div id='3' class="row lecturers">
                           <img src="assets/images/person1.jpg" class="col-lg-6" alt="" />
                           <div class="col-lg-6">
-                          <h2 class="name">James Brown</h2>
-                          <h5 class="title" id="position">Former ICT director at Microsoft</h5>
+                          <h5 class="name fw-bold">James Brown</h5>
+                          <h6 class="title" id="position">Former ICT director at Microsoft</h6>
                           <hr class="w-25">
                           <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
                         </div>  
@@ -264,8 +270,8 @@
                         <div id='4' class="row lecturers">
                         <img src="assets/images/person1.jpg" class="col-lg-6" alt="" />
                         <div class="col-lg-6">
-                        <h2 class="name">James Brown</h2>
-                        <h5 class="title" id="position">Former ICT director at Microsoft</h5>
+                        <h5 class="name fw-bold">James Brown</h5>
+                        <h6 class="title" id="position">Former ICT director at Microsoft</h6>
                         <hr class="w-25">
                         <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
                       </div>  
@@ -278,8 +284,8 @@
                       <div id='5' class="row lecturers">
                       <img src="assets/images/person1.jpg" class="col-lg-6" alt="" />
                       <div class="col-lg-6">
-                      <h2 class="name">James Brown</h2>
-                      <h5 class="title" id="position">Former ICT director at Microsoft</h5>
+                      <h5 class="name fw-bold">James Brown</h5>
+                      <h6 class="title" id="position">Former ICT director at Microsoft</h6>
                       <hr class="w-25">
                       <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
                     </div>  
@@ -292,8 +298,8 @@
                     <div id='6' class="row lecturers">
                     <img src="assets/images/person1.jpg" class="col-lg-6" alt="" />
                     <div class="col-lg-6">
-                    <h2 class="name">James Brown</h2>
-                    <h5 class="title" id="position">Former ICT director at Microsoft</h5>
+                    <h5 class="name fw-bold">James Brown</h5>
+                    <h6 class="title" id="position">Former ICT director at Microsoft</h6>
                     <hr class="w-25">
                     <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
                   </div>  
@@ -306,8 +312,8 @@
                   <div id='7' class="row lecturers">
                   <img src="assets/images/person1.jpg" class="col-lg-6" alt="" />
                   <div class="col-lg-6">
-                  <h2 class="name">James Brown</h2>
-                  <h5 class="title" id="position">Former ICT director at Microsoft</h5>
+                  <h5 class="name fw-bold">James Brown</h5>
+                  <h6 class="title" id="position">Former ICT director at Microsoft</h6>
                   <hr class="w-25">
                   <p id="description">James is a seasoned web developer with many years of experience in various languages and frameworks</p>
                 </div>  
@@ -345,12 +351,14 @@
                  </footer>
     </section>
     </main>
-    <script src="hamburger.js"></script>
+    <script type="application/javascript" src="hamburger.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
       crossorigin="anonymous"
     ></script>
+  </div>
+</div>
   </body>
 </html>
 
